--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         My name is Andres Riera. I am Junior in UCSD majoring in Data Science. 
         I am from Mexico City and I am very passionate about data science the applications it has on finance and economics.
     </p>
-    <img src= "/Users/andresriera/Desktop/dsc-106/portfolio/images/portfolio_image.JPG", alt= "Andres Riera Ortiz Parraga (Image)">
+    <img src= "/Users/andresriera/Desktop/dsc-106/portfolio/images/portfolio_image.JPG" alt= "Andres Riera Ortiz Parraga (Image)" width="200" height="200">
 
     
 </body>
