--- a/contact:index.html
+++ b/contact:index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html">Home</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
         </ul>
     </nav>
     <h1>Contact</h1>
