--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     </p>
     <img src= "/Users/andresriera/Desktop/dsc-106/portfolio/images/portfolio_image.JPG" alt= "Andres Riera Ortiz Parraga (Image)" width="200" height="200">
 
+    <nav>
+        <ul>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html">Home</a></li>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
+        </ul>
     
 </body>
 </html>
