--- a/projects:index.html
+++ b/projects:index.html
@@ -11,8 +11,10 @@
         <ul>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html">Home</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
+
         </ul>
-    </nav>
+    
     <h1>Projects</h1>
     <p>Welcome to my projects page. Here you will find details about the work I've done and the projects I've completed.</p>
 </body>
