--- a/contact:index.html
+++ b/contact:index.html
@@ -16,7 +16,7 @@
         </ul>
     </nav>
     <h1>Contact</h1>
-    <form action="arieraortizparraga@ucsd.edu" method="POST" enctype="text/plain">
+    <form action="mailto:arieraortizparraga@ucsd.edu" method="POST" enctype="text/plain">
         <!-- Email Address -->
         <label for="email">Your Email:</label><br>
         <input id="email" name="email" type="email" required><br><br>
