--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav>
         <ul>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html">Home</a></li>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html" class = "curent">Home</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/resume.html">Resume</a></li>
