--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/resume.html">Resume</a></li>
             <li><a href="https://github.com/AndresRiera" target="_blank">GitHub</a></li>
         </ul>
+    </nav>
         
     <h1>Andres Riera Ortiz Parraga</h1>
     <p>
