--- a/projects:index.html
+++ b/projects:index.html
@@ -16,7 +16,7 @@
             <li><a href="https://github.com/AndresRiera" target="_blank">GitHub</a></li>
 
         </ul>
-    
+    </nav>
     <h1>Projects</h1>
 
 </body>
