--- a/projects:index.html
+++ b/projects:index.html
@@ -10,7 +10,7 @@
     <nav>
         <ul>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html">Home</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html" class = "current">Projects</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/resume.html">Resume</a></li>
             <li><a href="https://github.com/AndresRiera" target="_blank">GitHub</a></li>
