--- a/contact:index.html
+++ b/contact:index.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html">Home</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html" class = "current">Contact</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/resume.html">Resume</a></li>
             <li><a href="https://github.com/AndresRiera" target="_blank">GitHub</a></li>
         </ul>
