--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <nav>
         <ul>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html" class = "curent">Home</a></li>
+            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html" class = "current">Home</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/resume.html">Resume</a></li>
             <li><a href="https://github.com/AndresRiera" target="_blank">GitHub</a></li>
         </ul>
     </nav>
-        
+
     <h1>Andres Riera Ortiz Parraga</h1>
     <p>
         My name is Andres Riera. I am Junior in UCSD majoring in Data Science. 
