--- a/projects:index.html
+++ b/projects:index.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <h1>Projects</h1>
-    <h2><div class="projects">
+    <div class="projects">
         <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
@@ -79,6 +79,6 @@
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Perferendis ducimus nostrum culpa sapiente nam, pariatur natus veritatis id reiciendis ullam, fuga repellat repellendus odit quod, quam nulla nihil consequuntur. Reiciendis nisi quia adipisci praesentium suscipit nobis molestiae in.</p>
         </article>
-    </div></h2>
+    </div>
 </body>
 </html>
