--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Andres Riera Ortiz Parraga: Personal site and Portfolio</title>
-    <link rel="stylesheet" href="/Users/andresriera/Desktop/dsc-106/portfolio/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
     <nav>
         <ul>
             <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html" class = "current">Home</a></li>
