--- a/contact:index.html
+++ b/contact:index.html
@@ -22,10 +22,10 @@
         <label for="email">Your Email:</label>
         <input id="email" name="email" type="email" required>
 
-        <label for="subject">Subject:</label><br>
+        <label for="subject">Subject:</label>
         <input id="subject" name="subject" type="text" required>
 
-        <label for="body">Message:</label><br>
+        <label for="body">Message:</label>
         <textarea id="body" name="body" rows="5" required></textarea>
         
         <button>Send Message</button>
