--- a/contact:index.html
+++ b/contact:index.html
@@ -5,17 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Andres Riera Ortiz Parraga</title>
     <link rel="stylesheet" href="/Users/andresriera/Desktop/dsc-106/portfolio/style.css">
+    <script type="module" src="global.js"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html">Home</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html" class = "current">Contact</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/resume.html">Resume</a></li>
-            <li><a href="https://github.com/AndresRiera" target="_blank">GitHub</a></li>
-        </ul>
-    </nav>
     <h1>Contact</h1>
     <form action="mailto:arieraortizparraga@ucsd.edu" method="POST" enctype="text/plain">
 
