--- a/index.html
+++ b/index.html
@@ -1,21 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="home">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Andres Riera Ortiz Parraga: Personal site and Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script type="module" src="global.js"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html" class = "current">Home</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html">Projects</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/resume.html">Resume</a></li>
-            <li><a href="https://github.com/AndresRiera" target="_blank">GitHub</a></li>
-        </ul>
-    </nav>
 
     <h1>Andres Riera Ortiz Parraga</h1>
     <p>
