--- a/projects:index.html
+++ b/projects:index.html
@@ -5,18 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - Andres Riera Ortiz Parraga</title>
     <link rel="stylesheet" href="/Users/andresriera/Desktop/dsc-106/portfolio/style.css">
+    <script type="module" src="global.js"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/index.html">Home</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/projects:index.html" class = "current">Projects</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/contact:index.html">Contact</a></li>
-            <li><a href="/Users/andresriera/Desktop/dsc-106/portfolio/resume.html">Resume</a></li>
-            <li><a href="https://github.com/AndresRiera" target="_blank">GitHub</a></li>
 
-        </ul>
-    </nav>
     <h1>Projects</h1>
     <div class="projects">
         <article>
