--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume - Andres Riera Ortiz Parraga</title>
     <link rel="stylesheet" href="../style.css">
-    <script type="module" src="global.js"></script>
+    <script type="module" src="../global.js"></script>
 </head>
 <body class="resume-page">
 
