--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Contact</h1>
-    <form action="mailto:arieraortizparraga@ucsd.edu" method="POST" enctype="text/plain">
+    <form action="mailto:arieraortizparraga@ucsd.edu" method="GET" enctype="text/plain">
 
         <label for="email">Your Email:</label>
         <input id="email" name="email" type="email" required>
