--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -6,12 +6,16 @@
     <title>Projects - Andres Riera Ortiz Parraga</title>
     <link rel="stylesheet" href="../style.css">
     <script type="module" src="../global.js"></script>
+    <script src="projects.js" type="module"></script>
 </head>
 <body>
 
-    <h1>Projects</h1>
-    <div class="projects">
-        <article>
+    <h1 class="projects-title">Projects</h1>
+    <div class="projects"></div>
+
+        
+
+        <!-- <article>
             <h2>Lorem ipsum dolor sit.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis maxime tempore, aliquam vero ut sit labore accusantium. Sequi reiciendis sint enim nihil? Blanditiis quaerat omnis repellat nostrum corporis assumenda pariatur!</p>
@@ -70,7 +74,10 @@
             <h2>Necessitatibus velit est aspernatur.</h2>
             <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
             <p>Perferendis ducimus nostrum culpa sapiente nam, pariatur natus veritatis id reiciendis ullam, fuga repellat repellendus odit quod, quam nulla nihil consequuntur. Reiciendis nisi quia adipisci praesentium suscipit nobis molestiae in.</p>
-        </article>
+        </article> -->
     </div>
+
+    
+
 </body>
 </html>
