--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title> Andres Riera Ortiz Parraga: Personal site and Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script type="module" src="global.js"></script>
+    <script src="index.js" type="module" defer></script>
 </head>
 <body>
 
@@ -16,7 +17,15 @@
     </p>
     <img src= "images/portfolio_image.JPG" alt= "Andres Riera Ortiz Parraga (Image)" width="200" height="300">
 
+    <h2>Latest Projects</h2>
+    <div class="projects">
+        <!-- Dynamically added content will appear here -->
+    </div>
     
+    <h2>GitHub Profile Stats</h2>
+    <div id="profile-stats">
+        <!-- GitHub data will appear here -->
+    </div>
     
 </body>
 </html>
