--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -6,7 +6,7 @@
     <title>Projects - Andres Riera Ortiz Parraga</title>
     <link rel="stylesheet" href="../style.css">
     <script type="module" src="../global.js"></script>
-    <script src="projects.js" type="module"></script>
+    <script src="./projects.js" type="module"></script>
 </head>
 <body>
 
