--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -10,6 +10,25 @@
 </head>
 <body>
 
+    <!-- <svg id="projects-plot" viewBox="-50 -50 100 100">
+        <path d="M -50 0 A 50 50 0 0 1 50 0 A 50 50 0 0 1 -50 0" fill="red" />
+    </svg> -->
+
+    <div class="container">
+        <svg viewBox="-50 -50 100 100">
+        </svg>
+
+        <ul class="legend"></ul>
+    </div>
+
+    <input
+        class="searchBar"
+        type="search"
+        aria-label="Search projects"
+        placeholder="🔍 Search projects…"
+    />
+
+
     <h1 class="projects-title">Projects</h1>
     <div class="projects"></div>
     </div>
