--- a/Meta/meta.html
+++ b/Meta/meta.html
@@ -6,9 +6,13 @@
     <title>Document</title>
     <link rel="stylesheet" href="../style.css">
     <script type="module" src="../global.js"></script>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
 </head>
 <body>
     <h1>Meta</h1>
     <p>This page includes stats about the code of this website.</p>
+
+    <div id="stats"></div>
+
 </body>
 </html>
