--- a/Meta/meta.html
+++ b/Meta/meta.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <script type="module" src="../global.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="main.js" defer></script>
 </head>
 <body>
     <h1>Meta</h1>
